# voxowl

./: .gitmodules  README.md  maketunnel-duranium.sh  maketunnel.sh  maketunnel2-duranium.sh  maketunnel2.sh
archive/: main-gpu.h  shadow_macro.h  volumetric.h
libsvmm/: CMakeLists.txt
libsvmm/include/: ivec3_32.h  platform.h  svmipmap.h  voxel.h  voxelmap.h
libsvmm/src/: ivec3_32.cpp  svmipmap.cpp  voxel.cpp  voxelmap.cpp
libvoxowl/include/: ivec3_32.h  libdivide.h  svmipmap.h  voxel.h  voxelmap.h  voxowl.h  voxowl_platform.h
libvoxowl/src/: ivec3_32.cu  svmipmap.cu  voxel.cu  voxelmap.cpp
scpviewer/: CMakeLists.txt  liacsviewer.sh
scpviewer/src/: main.cpp
server/: CMakeLists.txt  cmake_install.cmake  configure
server/src/: actor.cpp  actor.h  bmp.cpp  bmp.h  camera.cpp  camera.h  dda_cuda.cu  dda_cuda.h  environment.h  fbrendertarget.cpp  fbrendertarget.h  framebuffer.cpp  framebuffer.h  glrendertarget.cpp  jpegencoder.cpp  jpegencoder.h  main-cpu.cu  main-gpu.cu  main.cpp  main.cu  mengersponge.cpp  mengersponge.h  network.cpp  network.h  object.cpp  object.h  packetbuffer.cpp  packetbuffer.h  parser.cpp  parser.h  performance_counter.cpp  performance_counter.h  platform.h  raycast.cu  raycast.h  raycast_cuda.cu  raycast_cuda.h  renderer.cpp  renderer.h  rendertarget.h  (+14 more)
thesis/: abstract.tex  blocked.sty  icthesis.sty  preamble.aux  preamble.tex  thesis.tex  uhead.sty
thesis/bibliography/: bibliography.bib
thesis/chapters/: conclusions.tex  contributions.tex  datastructure.tex  decoding.tex  evaluation.tex  introduction.tex
thesis/figures/: dda.eps
thesis/results/: results.tex
thesis/titlepage/: titlepage.tex
voxowl/: CMakeLists.txt
voxowl-convert/: CMakeLists.txt  configure
voxowl-convert/src/: main.cpp  voxowl_convert.cpp  voxowl_convert.h
voxowl-sdl/: CMakeLists.txt
voxowl-sdl/sdl-ubuntu12.04/include/SDL2/: SDL_config.h
voxowl-sdl/src/: main.c  main.cpp  voxowl_network.c  voxowl_network.h
voxowl/cmake/: FindGLEW.cmake
voxowl/src/: .dda_cuda.cu.swp  .dda_cuda.h.swp  .main.cpp.swp  .main_server_old.cpp.swp  .mengersponge.cpp.swp  .mengersponge.h.swp  .raycast.cu.swp  .svmm_cuda.cu.swp  .svmm_cuda.h.swp  .volume_loader.cpp.swp  main.cpp  main_server_old.cpp  testing.cpp
voxowl/src/core/: .application.cpp.swp  .application.h.swp  .object.h.swp  .voxowl.h.swp  actor.cpp  actor.h  application.cpp  application.h  object.h  parser.cpp  parser.h  platform.h  voxowl.h
voxowl/src/cuda/: dda_cuda.h  ivec3_32.cu  raycast.cu  raycast.h  raycast_cuda.cu  raycast_cuda.h  svmm_cuda.cu  svmm_cuda.h
voxowl/src/module/: server_module.cpp  server_module.h
voxowl/src/network/: network.h  packetbuffer.h  server.cpp  server.h  socketbuf.h
voxowl/src/render/: camera.cpp  camera.h  fbrendertarget.cpp  framebuffer.cpp  framebuffer.h  glrendertarget.h  renderer.h  rendertarget.cpp  rendertarget.h  volume.h  volume_detail.h  volume_loader.cpp  volume_loader.h
voxowl/src/svmm/: svmipmap.cpp  voxel.cpp  voxelmap.cpp
voxowl/src/util/: .factory.h.swp  factory.h  jpegencoder.h  mengersponge.cpp  mengersponge.h  performance_counter.h
zandbak/: CMakeLists.txt  configure
zandbak/src/: main.cpp  main.h  utils.cpp  utils.h
